# shardmerge

./: .gitignore  README.md  pyproject.toml
scripts/: convert_pytorch_to_hf.py  rewrite_reorder.py  verify_safetensors.py
shard/: __main__.py  config.py  constants.py  download.py  index.py  inference.py  writer.py
shard/merge/: addition.py  base.py  fast_fourier.py  fourier.py  taskaddition.py
shard/tensor/: functions.py  util.py
tests/: conftest.py  test_config.py  test_constants.py  test_download.py  test_index.py  test_inference.py  test_main.py  test_tensor_functions.py  test_writer.py
tests/merge/: __init__.py  conftest.py  test_addition.py  test_base.py  test_fast_fourier.py  test_fourier.py  test_taskaddition.py
tests/tensor/: __init__.py  conftest.py  test_functions.py  test_util.py
